syntax = "proto3";
package bluzelle.curium.storage;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/bluzelle/bluzelle-public/curium/x/storage/types";

// Query defines the gRPC querier service.
service Query {
	rpc HasContent(QueryHasContentRequest) returns (QueryHasContentResponse) {
		option (google.api.http).get = "/bluzelle/curium/storage/hasContent";
	}

// this line is used by starport scaffolding # 2
}

message QueryHasContentRequest {
	string cid = 1;
}

message QueryHasContentResponse {
  bool hasContent = 1;
}

// this line is used by starport scaffolding # 3
